src/objects/n2de__Distributor_category__c.object
<CustomObject>
    <description>Distributor filters</description>
    <fields>
        <fullName>n2de__Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>n2de__Distributor__c</referenceTo>
        <relationshipLabel>Distributor category</relationshipLabel>
        <relationshipName>Distributor_category</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Filter_comparison_argument__c</fullName>
        <label>Filter comparison argument - deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Filter_comparison_argument_long__c</fullName>
        <label>Filter comparison argument</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Filter_comparison_operator__c</fullName>
        <label>Filter comparison operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ends with</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Filter_field_name__c</fullName>
        <inlineHelpText>Object field, operator and comparison argument used to filter objects distributed from the queue by this distributor.</inlineHelpText>
        <label>Filter field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Filter_field_type__c</fullName>
        <label>Filter field type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Filter_sequence__c</fullName>
        <label>Filter sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Distributor category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>